--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Simran Bardhan</title>
+  <link rel="icon" href="./SB.png" type="image/x-icon"/>
 </head>
 
 <body>
